tests/NormalTests/paczka2/big_fuzzy/64326323.err
Error in line 2: S69 S69 19,7
Error in line 3: HOFNvQtG S869 92,8
Error in line 21: gYHl S462 52,7
Error in line 23: gYHl S69 24,4
Error in line 39: 8GPXr7 S462 63,9
Error in line 50: 5GSdV8G A374 74,34
Error in line 48: 21l0L S462 131,2
Error in line 54: 5GSdV8G A374 6,8
Error in line 61: 5GSdV8G S462 5,1
Error in line 58: HOFNvQtG S462 25,0
Error in line 60: 8GPXr7 A374 4,3
Error in line 67: 8GPXr7 S69 44,9
Error in line 63: 21l0L S462 33,1
Error in line 84: 5GSdV8G S869 80,2
Error in line 99: S69 S869 3,7
Error in line 103: S69 S462 61,4
Error in line 102: 5GSdV8G S462 16,2
Error in line 110: HOFNvQtG S869 22,97
Error in line 98: 8GPXr7 S869 246,9
Error in line 115: gYHl SP9 23,5
Error in line 107: S69 A374 29,9
Error in line 117: S69 S69 0,7
Error in line 122: 21l0L S69 24,7
Error in line 125: gYHl A374 98,8
Error in line 127: gYHl S869 23,4
Error in line 114: HOFNvQtG S869 76,7
Error in line 128: 8GPXr7 S69 28,2
Error in line 121: S69 S462 26,2
Error in line 134: 8GPXr7 A374 5,5
Error in line 139: 5GSdV8G S69 78,0
Error in line 151: S69 S869 697,4
Error in line 155: S69 S69 94,4
Error in line 141: 5GSdV8G S462 36,9
Error in line 159: 21l0L S69 8,6
Error in line 169: HOFNvQtG S462 8,6
Error in line 180: gYHl S869 90,3
Error in line 182: 5GSdV8G S69 16,5
Error in line 173: S69 S869 58,8
Error in line 179: HOFNvQtG A374 82,8
Error in line 206: HOFNvQtG S869 36,72
Error in line 204: gYHl S462 62,7
Error in line 208: gYHl S869 18,5
Error in line 218: HOFNvQtG S869 164,95
Error in line 211: 8GPXr7 S69 85,8
Error in line 221: 5GSdV8G S869 43,7
Error in line 229: gYHl S69 65,4
Error in line 215: HOFNvQtG S869 44,7
Error in line 219: 8GPXr7 A374 50,4
